Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Tue Jul 16 12:00:00 BST 2002	Riley Williams <Riley@Williams.Name>

	* Converted various '#ifdef DEBUG / printk() / #endif' blocks
	  into debug() blocks, simplifying code layout. Also mapped some
	  "#if 0 / printk() / #endif" blocks to debug() blocks.
	* Corrected calculation of hard drive size.
	* Finished removing the "Roor location" menu by removing all of
	  the relevant configuration variables from the help system.
	* Rationalised configuration variables. The compiler will now set
	  the root flags to indicate that the root partition is mounted
	  read-only by default, the same as Linux does. In addition, some
	  configuration variables that were simply aliases of others have
	  been replaced by the variables they are aliases of. All of the
	  remaining configuration variables actually occur within the
	  configuration system, and all except three SiBO configuration
	  variables also occur within the configuration help system.
	* Standardised syntax of return statements throughout source.
	* Updated script to list configuration variables and map how many
	  of each typo of files each variable occurs with.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Sat Jul 13 19:56:01 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Added support for post-compilation change of the root device.
	  The device is now set with the "rdev" command.
	* Removed the "Root location" menu in the configuration as it's
	  not needed any more.

Sat Jul 13 06:51:45 BST 2002	Riley Williams <Riley@Williams.Name>

	* Inverted configuration options to be more logical.
